--- a/src/app/components/basket/Basket.component.html
+++ b/src/app/components/basket/Basket.component.html
@@ -1,1 +1,2 @@
 <h1> Basket.component component generated </h1>
+<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
