--- a/src/app/components/ui/footer/footer.component.scss
+++ b/src/app/components/ui/footer/footer.component.scss
@@ -2,3 +2,17 @@
     position: fixed;
     bottom: 0;
 }
+
+.example-spacer {
+    flex: 1 1 auto;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+}
+
+.no-select {
+    cursor: pointer;
+    user-select: none;
+}
