--- a/src/app/components/products/Products.component.html
+++ b/src/app/components/products/Products.component.html
@@ -1,1 +1,5 @@
-<h1> Products.component component generated </h1>
+<div class="container">
+  @for (item of test; track $index) {
+    <card-component title="{{item}}"></card-component>
+  }
+</div>
