--- a/src/app/components/ui/footer/footer.component.html
+++ b/src/app/components/ui/footer/footer.component.html
@@ -1,1 +1,13 @@
-<footer class="footer"> footer.component component generated </footer>
+<mat-toolbar class="footer">
+    <mat-toolbar-row>
+      <div class="footer-inner no-select" routerLink="base">
+        <mat-icon
+          aria-hidden="false"
+          aria-label="Example home icon"
+          fontIcon="home"
+        ></mat-icon>
+        <span>Footer</span>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  
