--- a/src/app/components/ui/header/Header.component.html
+++ b/src/app/components/ui/header/Header.component.html
@@ -1,18 +1,19 @@
-<p>
-  <mat-toolbar>
-    <mat-toolbar-row>
-      <div class="toolbar no-select" routerLink="base">
-        <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
-        <span>My Application</span>
-      </div>
-      <span class="example-spacer"></span>
-      <nav class="toolbar no-select">
-        <mat-icon aria-hidden="false" fontIcon="shopping-basket"></mat-icon>
-        <a routerLink="">base</a>
-        <a routerLink="basket" class="cursor-pointer">basket</a>
-        <a routerLink="products" class="cursor-pointer">products</a>
-      </nav>
-    </mat-toolbar-row>
-  </mat-toolbar>
-</p>
-
+<mat-toolbar>
+  <mat-toolbar-row>
+    <div class="toolbar no-select" routerLink="base">
+      <mat-icon
+        aria-hidden="false"
+        aria-label="Example home icon"
+        fontIcon="home"
+      ></mat-icon>
+      <span>BeatPapa</span>
+    </div>
+    <span class="example-spacer"></span>
+    <nav class="toolbar no-select">
+      
+      <button class="toolbar button" mat-flat-button routerLink="">Главная</button>
+      <button class="toolbar button" mat-flat-button routerLink="basket">Товары</button>
+      <button class="toolbar button" mat-flat-button routerLink="products"><mat-icon aria-hidden="false" fontIcon="shopping-basket"></mat-icon></button>
+    </nav>
+  </mat-toolbar-row>
+</mat-toolbar>
