--- a/src/app/components/products/Products.component.scss
+++ b/src/app/components/products/Products.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 1rem;
 }
 
