--- a/src/app/components/products/Products.component.html
+++ b/src/app/components/products/Products.component.html
@@ -1,5 +1,24 @@
+<div>{{ this.beatsService.errorMessage }}</div>
 <div class="container">
-  @for (item of test; track $index) {
-    <card-component title="{{item}}"></card-component>
+  @for (beat of beats; track $index) {
+    <!-- <card-component title="{{beat.title}}"></card-component> -->
+
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>{{ beat.title }}</mat-card-title>
+        <mat-card-subtitle>{{ beat.views }} {{ beat.price.current | currency }}</mat-card-subtitle>
+      </mat-card-header>
+      <img class="example-card-image" mat-card-image src="{{ beat.image }}}" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          {{ beat.genre }}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>В корзину</button>
+        <button mat-button [routerLink]="['./', beat.id]">Подробнее</button>
+      </mat-card-actions>
+    </mat-card>
   }
 </div>
