--- a/src/app/components/products/Products.component.scss
+++ b/src/app/components/products/Products.component.scss
@@ -6,5 +6,15 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+
+
+
+    .example-card-image {
+      width: 350px;
+      height: 400px;
+    }
+  
+
+
 }
 
